--- a/index.html
+++ b/index.html
@@ -2,24 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vue html5 editor</title>
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>vue html5 editor demo</title>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
+    <script src="https://raw.githubusercontent.com/chmln/vue-html5-editor/master/dist/vue-html5-editor.js"></script>
+    <script src="https://cdn.bootcss.com/vue/1.0.26/vue.js"></script>
+    <link href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <style>
+        #app {
+            margin: 50px auto;
+            width: 800px;
+            max-width: 100%;
+        }
+    </style>
 </head>
 <body>
-<div class="container-fluid" style="width: 800px">
-    <h1 class="page-header">Vue html5 editor Demo</h1>
-    <p>Vue-html5-editor is an html5 wysiwyg editor for vue,easy and flexible,compatible with Vue.js 1.0+.</p>
-    <p>GitHub:
-        <a href="https://github.com/PeakTai/vue-html5-editor">
-            https://github.com/PeakTai/vue-html5-editor</a>
-    </p>
-    <ul>
-        <li><a href="basic.html">basic</a></li>
-        <li><a href="custom-icon.html">custom icon</a></li>
-        <li><a href="i18n.html">i18n</a></li>
-        <li><a href="extended-module.html">extended-module</a></li>
-    </ul>
+<div id="app">
+    <vue-html5-editor :content.sync="content" :height="500"></vue-html5-editor>
 </div>
+
+<script>
+    Vue.use(VueHtml5Editor)
+    new Vue({
+        el: "#app",
+        data: {
+            content: "<h3>vue html5 editor</h3>",
+        }
+    })
+</script>
 </body>
 </html>
