--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>vue html5 editor demo</title>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
-    <script src="https://raw.githubusercontent.com/chmln/vue-html5-editor/master/dist/vue-html5-editor.js"></script>
+    <script src="https://rawgit.com/chmln/vue-html5-editor/master/dist/vue-html5-editor.js"></script>
     <script src="https://cdn.bootcss.com/vue/1.0.26/vue.js"></script>
     <link href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <style>
